docs: added the additional one time step for VS Code

--- a/docs/developer-docs/5.43.x/get-started/build-with-llms-ai.mdx
+++ b/docs/developer-docs/5.43.x/get-started/build-with-llms-ai.mdx
@@ -53,9 +53,9 @@ To manually connect to the Webiny MCP server in Cursor, add the following to you
 
 ### VS Code
 
-[Click here](https://vscode.dev/redirect/mcp/install?name=webiny&config=%7B%22type%22%3A%22http%22%2C%22url%22%3A%22https%3A%2F%2Fmcp.docs.webiny.com%2Fmcp%22%7D) to add the Webiny MCP server to VSCode.
+[Click here](https://vscode.dev/redirect/mcp/install?name=webiny&config=%7B%22type%22%3A%22http%22%2C%22url%22%3A%22https%3A%2F%2Fmcp.docs.webiny.com%2Fmcp%22%7D) to add the Webiny MCP server to VS Code.
 
-To manually connect to the Webiny MCP server in VSCode, add the following to your `.vscode/mcp.json` file in your workspace:
+To manually connect to the Webiny MCP server in VS Code, add the following to your `.vscode/mcp.json` file in your workspace:
 
 ```json
 {
@@ -69,6 +69,12 @@ To manually connect to the Webiny MCP server in VSCode, add the following to you
 ```
 
 Learn more in the [VS Code documentation](https://code.visualstudio.com/docs/copilot/chat/mcp-servers).
+
+<Alert type="info" title="Additional One-Time Setup in VS Code">
+  Sometimes, in VS Code, you may need to perform a one-time setup. When you ask a question and include a phrase like “use Webiny Docs”, then VS Code will prompt you to enable the Webiny MCP server for all sessions. Allow it, and the setup will be complete. This step is required only once. Please refer to the image below for reference.
+</Alert>
+
+![VS Code Webiny MCP Server](./assets/vs-code-webiny-mcp.png)
 
 ### Claude Desktop
 
