docs: updated the Cursor MCP server quick link

--- a/docs/developer-docs/5.43.x/get-started/build-with-llms-ai.mdx
+++ b/docs/developer-docs/5.43.x/get-started/build-with-llms-ai.mdx
@@ -13,7 +13,7 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
-In this chapter, you'll learn how you can use AI assistants and Remote MCP Server effectively in your Webiny development workflow.
+In this guide, you'll learn how you can use AI assistants and Remote MCP Server effectively in your Webiny development workflow.
 
 ## Webiny MCP Server
 
@@ -37,7 +37,7 @@ You can add it to AI agents that support connecting to MCP servers.
 
 ### Cursor
 
-[Click here](https://cursor.com/install-mcp?name=webiny&config=eyJ1cmwiOiJodHRwczovL21jcC5kb2NzLndlYmlueS5jb20vbWNwIn0K) to add the Webiny MCP server to Cursor.
+[Click here](cursor://anysphere.cursor-deeplink/mcp/install?name=Webiny&config=eyJ1cmwiOiJodHRwczovL21jcC5kb2NzLndlYmlueS5jb20vbWNwIn0K) to add the Webiny MCP server to Cursor.
 
 To manually connect to the Webiny MCP server in Cursor, add the following to your `.cursor/mcp.json` file or Cursor settings, as explained in the [Cursor documentation](https://docs.cursor.com/context/model-context-protocol):
 
