refactor: change group before create to implement logger

--- a/docs/developer-docs/6.0.x/headless-cms/event-handler/group.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/event-handler/group.mdx
@@ -26,13 +26,16 @@ With the lifecycle events you can hook into a number of different Group related 
 
 ```typescript extensions/cms/group/eventHandler/create/beforeCreate.ts
 import { GroupBeforeCreateEventHandler as GroupBeforeCreateEventHandlerAbstraction } from "webiny/api/cms/group";
+import { Logger } from "webiny/api/features/Logger";
 
 class GroupBeforeCreateEventHandlerImpl
     implements GroupBeforeCreateEventHandlerAbstraction.Interface
 {
+    public constructor(private logger: Logger.Interface) {}
+
     public async handle(event: GroupBeforeCreateEventHandlerAbstraction.Event): Promise<void> {
         const { payload, occurredAt, eventType } = event;
-        console.error("Trying to create a group:", {
+        this.logger.error("Trying to create a group:", {
             payload,
             occurredAt,
             eventType
@@ -43,7 +46,7 @@ class GroupBeforeCreateEventHandlerImpl
 const GroupBeforeCreateEventHandler = GroupBeforeCreateEventHandlerAbstraction.createImplementation(
     {
         implementation: GroupBeforeCreateEventHandlerImpl,
-        dependencies: []
+        dependencies: [Logger]
     }
 );
 
