refactor: implement logger

--- a/docs/developer-docs/6.0.x/headless-cms/event-handler/group.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/event-handler/group.mdx
@@ -35,7 +35,7 @@ class GroupBeforeCreateEventHandlerImpl
 
     public async handle(event: GroupBeforeCreateEventHandlerAbstraction.Event): Promise<void> {
         const { payload, occurredAt, eventType } = event;
-        this.logger.error("Trying to create a group:", {
+        this.logger.info("Trying to create a group:", {
             payload,
             occurredAt,
             eventType
@@ -57,13 +57,16 @@ export default GroupBeforeCreateEventHandler;
 
 ```typescript extensions/cms/group/eventHandler/create/beforeCreate.ts
 import { GroupAfterCreateEventHandler as GroupAfterCreateEventHandlerAbstraction } from "webiny/api/cms/group";
+import { Logger } from "webiny/api/features/Logger";
 
 class GroupAfterCreateEventHandlerImpl
     implements GroupAfterCreateEventHandlerAbstraction.Interface
 {
+    public constructor(private logger: Logger.Interface) {}
+
     public async handle(event: GroupAfterCreateEventHandlerAbstraction.Event): Promise<void> {
         const { payload, occurredAt, eventType } = event;
-        console.error("Created a group:", {
+        this.logger.info("Created a group:", {
             payload,
             occurredAt,
             eventType
@@ -74,7 +77,7 @@ class GroupAfterCreateEventHandlerImpl
 const GroupAfterCreateEventHandler = GroupAfterCreateEventHandlerAbstraction.createImplementation(
     {
         implementation: GroupAfterCreateEventHandlerImpl,
-        dependencies: []
+        dependencies: [Logger]
     }
 );
 
@@ -87,13 +90,16 @@ export default GroupAfterCreateEventHandler;
 
 ```typescript extensions/cms/group/eventHandler/update/beforeUpdate.ts
 import { GroupBeforeUpdateEventHandler as GroupBeforeUpdateEventHandlerAbstraction } from "webiny/api/cms/group";
+import { Logger } from "webiny/api/features/Logger";
 
 class GroupBeforeUpdateEventHandlerImpl
     implements GroupBeforeUpdateEventHandlerAbstraction.Interface
 {
+    public constructor(private logger: Logger.Interface) {}
+
     public async handle(event: GroupBeforeUpdateEventHandlerAbstraction.Event): Promise<void> {
         const { payload, occurredAt, eventType } = event;
-        console.error("Trying to update a group:", {
+        this.logger.info("Trying to update a group:", {
             payload,
             occurredAt,
             eventType
@@ -104,7 +110,7 @@ class GroupBeforeUpdateEventHandlerImpl
 const GroupBeforeUpdateEventHandler = GroupBeforeUpdateEventHandlerAbstraction.createImplementation(
     {
         implementation: GroupBeforeUpdateEventHandlerImpl,
-        dependencies: []
+        dependencies: [Logger]
     }
 );
 
@@ -115,13 +121,16 @@ export default GroupBeforeUpdateEventHandler;
 
 ```typescript extensions/cms/group/eventHandler/update/beforeUpdate.ts
 import { GroupAfterUpdateEventHandler as GroupAfterUpdateEventHandlerAbstraction } from "webiny/api/cms/group";
+import { Logger } from "webiny/api/features/Logger";
 
 class GroupAfterUpdateEventHandlerImpl
     implements GroupAfterUpdateEventHandlerAbstraction.Interface
 {
+    public constructor(private logger: Logger.Interface) {}
+
     public async handle(event: GroupAfterUpdateEventHandlerAbstraction.Event): Promise<void> {
         const { payload, occurredAt, eventType } = event;
-        console.error("Updated a group:", {
+        this.logger.info("Updated a group:", {
             payload,
             occurredAt,
             eventType
@@ -132,7 +141,7 @@ class GroupAfterUpdateEventHandlerImpl
 const GroupAfterUpdateEventHandler = GroupAfterUpdateEventHandlerAbstraction.createImplementation(
     {
         implementation: GroupAfterUpdateEventHandlerImpl,
-        dependencies: []
+        dependencies: [Logger]
     }
 );
 
@@ -145,13 +154,16 @@ export default GroupAfterUpdateEventHandler;
 
 ```typescript extensions/cms/group/eventHandler/delete/beforeDelete.ts
 import { GroupBeforeDeleteEventHandler as GroupBeforeDeleteEventHandlerAbstraction } from "webiny/api/cms/group";
+import { Logger } from "webiny/api/features/Logger";
 
 class GroupBeforeDeleteEventHandlerImpl
     implements GroupBeforeDeleteEventHandlerAbstraction.Interface
 {
+    public constructor(private logger: Logger.Interface) {}
+
     public async handle(event: GroupBeforeDeleteEventHandlerAbstraction.Event): Promise<void> {
         const { payload, occurredAt, eventType } = event;
-        console.error("Trying to delete a group:", {
+        this.logger.info("Trying to delete a group:", {
             payload,
             occurredAt,
             eventType
@@ -162,7 +174,7 @@ class GroupBeforeDeleteEventHandlerImpl
 const GroupBeforeDeleteEventHandler = GroupBeforeDeleteEventHandlerAbstraction.createImplementation(
     {
         implementation: GroupBeforeDeleteEventHandlerImpl,
-        dependencies: []
+        dependencies: [Logger]
     }
 );
 
@@ -173,13 +185,16 @@ export default GroupBeforeDeleteEventHandler;
 
 ```typescript extensions/cms/group/eventHandler/delete/beforeDelete.ts
 import { GroupAfterDeleteEventHandler as GroupAfterDeleteEventHandlerAbstraction } from "webiny/api/cms/group";
+import { Logger } from "webiny/api/features/Logger";
 
 class GroupAfterDeleteEventHandlerImpl
     implements GroupAfterDeleteEventHandlerAbstraction.Interface
 {
+    public constructor(private logger: Logger.Interface) {}
+
     public async handle(event: GroupAfterDeleteEventHandlerAbstraction.Event): Promise<void> {
         const { payload, occurredAt, eventType } = event;
-        console.error("Deleted a group:", {
+        this.logger.info("Deleted a group:", {
             payload,
             occurredAt,
             eventType
@@ -190,7 +205,7 @@ class GroupAfterDeleteEventHandlerImpl
 const GroupAfterDeleteEventHandler = GroupAfterDeleteEventHandlerAbstraction.createImplementation(
     {
         implementation: GroupAfterDeleteEventHandlerImpl,
-        dependencies: []
+        dependencies: [Logger]
     }
 );
 
