--- a/docs/developer-docs/6.0.x/headless-cms/event-handler/model.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/event-handler/model.mdx
@@ -25,14 +25,17 @@ With the lifecycle events you can hook into a number of different Model related 
 ### ModelBeforeCreateEventHandler
 
 ```typescript extensions/cms/model/eventHandler/create/beforeCreate.ts
-import {ModelBeforeCreateEventHandler as ModelBeforeCreateEventHandlerAbstraction} from "webiny/api/cms/model";
+import { ModelBeforeCreateEventHandler as ModelBeforeCreateEventHandlerAbstraction } from "webiny/api/cms/model";
+import { Logger } from "webiny/api/features/Logger";
 
 class ModelBeforeCreateEventHandlerImpl
     implements ModelBeforeCreateEventHandlerAbstraction.Interface
 {
+    public constructor(private logger: Logger.Interface) {}
+
     public async handle(event: ModelBeforeCreateEventHandlerAbstraction.Event): Promise<void> {
         const { payload, occurredAt, eventType } = event;
-        console.error("Trying to create a model:", {
+        this.logger.info("Trying to create a model:", {
             payload,
             occurredAt,
             eventType
@@ -43,7 +46,7 @@ class ModelBeforeCreateEventHandlerImpl
 const ModelBeforeCreateEventHandler = ModelBeforeCreateEventHandlerAbstraction.createImplementation(
     {
         implementation: ModelBeforeCreateEventHandlerImpl,
-        dependencies: []
+        dependencies: [Logger]
     }
 );
 
@@ -54,13 +57,16 @@ export default ModelBeforeCreateEventHandler;
 
 ```typescript extensions/cms/model/eventHandler/create/beforeCreate.ts
 import { ModelAfterCreateEventHandler as ModelAfterCreateEventHandlerAbstraction } from "webiny/api/cms/model";
+import { Logger } from "webiny/api/features/Logger";
 
 class ModelAfterCreateEventHandlerImpl
     implements ModelAfterCreateEventHandlerAbstraction.Interface
 {
+    public constructor(private logger: Logger.Interface) {}
+
     public async handle(event: ModelAfterCreateEventHandlerAbstraction.Event): Promise<void> {
         const { payload, occurredAt, eventType } = event;
-        console.error("Created a model:", {
+        this.logger.info("Created a model:", {
             payload,
             occurredAt,
             eventType
@@ -71,7 +77,7 @@ class ModelAfterCreateEventHandlerImpl
 const ModelAfterCreateEventHandler = ModelAfterCreateEventHandlerAbstraction.createImplementation(
     {
         implementation: ModelAfterCreateEventHandlerImpl,
-        dependencies: []
+        dependencies: [Logger]
     }
 );
 
@@ -84,13 +90,16 @@ export default ModelAfterCreateEventHandler;
 
 ```typescript extensions/cms/model/eventHandler/update/beforeUpdate.ts
 import { ModelBeforeUpdateEventHandler as ModelBeforeUpdateEventHandlerAbstraction } from "webiny/api/cms/model";
+import { Logger } from "webiny/api/features/Logger";
 
 class ModelBeforeUpdateEventHandlerImpl
     implements ModelBeforeUpdateEventHandlerAbstraction.Interface
 {
+    public constructor(private logger: Logger.Interface) {}
+
     public async handle(event: ModelBeforeUpdateEventHandlerAbstraction.Event): Promise<void> {
         const { payload, occurredAt, eventType } = event;
-        console.error("Trying to update a model:", {
+        this.logger.info("Trying to update a model:", {
             payload,
             occurredAt,
             eventType
@@ -101,7 +110,7 @@ class ModelBeforeUpdateEventHandlerImpl
 const ModelBeforeUpdateEventHandler = ModelBeforeUpdateEventHandlerAbstraction.createImplementation(
     {
         implementation: ModelBeforeUpdateEventHandlerImpl,
-        dependencies: []
+        dependencies: [Logger]
     }
 );
 
@@ -112,13 +121,16 @@ export default ModelBeforeUpdateEventHandler;
 
 ```typescript extensions/cms/model/eventHandler/update/beforeUpdate.ts
 import { ModelAfterUpdateEventHandler as ModelAfterUpdateEventHandlerAbstraction } from "webiny/api/cms/model";
+import { Logger } from "webiny/api/features/Logger";
 
 class ModelAfterUpdateEventHandlerImpl
     implements ModelAfterUpdateEventHandlerAbstraction.Interface
 {
+    public constructor(private logger: Logger.Interface) {}
+
     public async handle(event: ModelAfterUpdateEventHandlerAbstraction.Event): Promise<void> {
         const { payload, occurredAt, eventType } = event;
-        console.error("Updated a model:", {
+        this.logger.info("Updated a model:", {
             payload,
             occurredAt,
             eventType
@@ -129,7 +141,7 @@ class ModelAfterUpdateEventHandlerImpl
 const ModelAfterUpdateEventHandler = ModelAfterUpdateEventHandlerAbstraction.createImplementation(
     {
         implementation: ModelAfterUpdateEventHandlerImpl,
-        dependencies: []
+        dependencies: [Logger]
     }
 );
 
@@ -142,13 +154,16 @@ export default ModelAfterUpdateEventHandler;
 
 ```typescript extensions/cms/model/eventHandler/delete/beforeDelete.ts
 import { ModelBeforeDeleteEventHandler as ModelBeforeDeleteEventHandlerAbstraction } from "webiny/api/cms/model";
+import { Logger } from "webiny/api/features/Logger";
 
 class ModelBeforeDeleteEventHandlerImpl
     implements ModelBeforeDeleteEventHandlerAbstraction.Interface
 {
+    public constructor(private logger: Logger.Interface) {}
+
     public async handle(event: ModelBeforeDeleteEventHandlerAbstraction.Event): Promise<void> {
         const { payload, occurredAt, eventType } = event;
-        console.error("Trying to delete a model:", {
+        this.logger.info("Trying to delete a model:", {
             payload,
             occurredAt,
             eventType
@@ -159,7 +174,7 @@ class ModelBeforeDeleteEventHandlerImpl
 const ModelBeforeDeleteEventHandler = ModelBeforeDeleteEventHandlerAbstraction.createImplementation(
     {
         implementation: ModelBeforeDeleteEventHandlerImpl,
-        dependencies: []
+        dependencies: [Logger]
     }
 );
 
@@ -170,13 +185,16 @@ export default ModelBeforeDeleteEventHandler;
 
 ```typescript extensions/cms/model/eventHandler/delete/beforeDelete.ts
 import { ModelAfterDeleteEventHandler as ModelAfterDeleteEventHandlerAbstraction } from "webiny/api/cms/model";
+import { Logger } from "webiny/api/features/Logger";
 
 class ModelAfterDeleteEventHandlerImpl
     implements ModelAfterDeleteEventHandlerAbstraction.Interface
 {
+    public constructor(private logger: Logger.Interface) {}
+
     public async handle(event: ModelAfterDeleteEventHandlerAbstraction.Event): Promise<void> {
         const { payload, occurredAt, eventType } = event;
-        console.error("Deleted a model:", {
+        this.logger.info("Deleted a model:", {
             payload,
             occurredAt,
             eventType
@@ -187,7 +205,7 @@ class ModelAfterDeleteEventHandlerImpl
 const ModelAfterDeleteEventHandler = ModelAfterDeleteEventHandlerAbstraction.createImplementation(
     {
         implementation: ModelAfterDeleteEventHandlerImpl,
-        dependencies: []
+        dependencies: [Logger]
     }
 );
 
