--- a/docs/developer-docs/6.0.x/headless-cms/event-handler/group.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/event-handler/group.mdx
@@ -18,7 +18,7 @@ import {Alert} from "@/components/Alert";
 
 In our Headless CMS we provide events for our users to hook into.
 
-With the lifecycle events you can hook into a number of different Group related operations, all of which we will list here.
+With the events you can hook into a number of different Group related operations, all of which we will list here.
 
 ## Create a Group
 
@@ -55,7 +55,7 @@ export default GroupBeforeCreateEventHandler;
 
 ### GroupAfterCreateEventHandler
 
-```typescript extensions/cms/group/eventHandler/create/beforeCreate.ts
+```typescript extensions/cms/group/eventHandler/create/afterCreate.ts
 import { GroupAfterCreateEventHandler as GroupAfterCreateEventHandlerAbstraction } from "webiny/api/cms/group";
 import { Logger } from "webiny/api/features/Logger";
 
@@ -119,7 +119,7 @@ export default GroupBeforeUpdateEventHandler;
 
 ### GroupAfterUpdateEventHandler
 
-```typescript extensions/cms/group/eventHandler/update/beforeUpdate.ts
+```typescript extensions/cms/group/eventHandler/update/afterUpdate.ts
 import { GroupAfterUpdateEventHandler as GroupAfterUpdateEventHandlerAbstraction } from "webiny/api/cms/group";
 import { Logger } from "webiny/api/features/Logger";
 
@@ -183,7 +183,7 @@ export default GroupBeforeDeleteEventHandler;
 
 ### GroupAfterDeleteEventHandler
 
-```typescript extensions/cms/group/eventHandler/delete/beforeDelete.ts
+```typescript extensions/cms/group/eventHandler/delete/afterDelete.ts
 import { GroupAfterDeleteEventHandler as GroupAfterDeleteEventHandlerAbstraction } from "webiny/api/cms/group";
 import { Logger } from "webiny/api/features/Logger";
 
