wip: entry events

--- a/docs/developer-docs/6.0.x/headless-cms/event-handler/entry.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/event-handler/entry.mdx
@@ -83,6 +83,36 @@ const EntryAfterCreateEventHandler = EntryAfterCreateEventHandlerAbstraction.cre
 export default EntryAfterCreateEventHandler;
 ```
 
+list of events to implement:
+EntryRevisionBeforeCreateEventHandler
+EntryRevisionAfterCreateEventHandler
+
+EntryBeforeUpdateEventHandler
+EntryAfterUpdateEventHandler
+
+EntryBeforeDeleteEventHandler
+EntryAfterDeleteEventHandler
+
+EntryBeforeDeleteMultipleEventHandler
+EntryAfterDeleteMultipleEventHandler
+
+EntryRevisionBeforeDeleteEventHandler
+EntryRevisionAfterDeleteEventHandler
+
+EntryBeforeMoveEventHandler
+EntryAfterMoveEventHandler
+
+EntryBeforePublishEventHandler
+EntryAfterPublishEventHandler
+
+EntryBeforeRepublishEventHandler
+EntryAfterRepublishEventHandler
+
+EntryBeforeUnpublishEventHandler
+EntryAfterUnpublishEventHandler
+
+EntryBeforeRestoreFromBinEventHandler
+EntryAfterRestoreFromBinEventHandler
 
 --- insert after this  ---
 
